--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Jon Barron</title>
+  <title>Yiran Shi</title>
   
-  <meta name="author" content="Jon Barron">
+  <meta name="author" content="Yiran Shi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -20,15 +20,18 @@
               <p style="text-align:center">
                 <name>Yiran(Steven) Shi</name>
               </p>
-              <p>I am a senior at <a href="https://www.middlebury.edu/">Middlebury College</a>, where I study computer science and mathematics.
+              <p>I am a senior at <a href="https://www.middlebury.edu/">Middlebury College</a>, where I study computer science and mathematics. I also work at
+                <a href="https://yakera.org/">Yakera</a> as a Full-Stack Engineer. 
               </p>
               <p>
-                At Middlebury I've participated in bioinformatics research, advised by <a href="http://www.cs.middlebury.edu/~mlinderman/">Micheal Linderman</a>. I am also a <a href="https://www.middlebury.edu/office/social-entrepreneurship">Middlebury Social Entrepreneurship Fellow</a>.
+                At Middlebury I've participated in bioinformatics research, advised by <a href="http://www.cs.middlebury.edu/~mlinderman/">Micheal Linderman</a>. 
+                I am honored to be selected as <a href="https://www.middlebury.edu/office/social-entrepreneurship">Middlebury Social Entrepreneurship Fellow</a> for 
+                my work in promoting rural education in China. Outside of school, I am a certified snowboard instructor and enjoy basketball, hiking, and playing the guitar.
               </p>
               <p style="text-align:center">
                 <a href="mailto:yirans@middlebury.edu">Email</a> &nbsp/&nbsp
                 <a href="data/YShi_Resume.pdf">Resumé</a> &nbsp/&nbsp
-                <a href="https://medium.com/@yirans">Blog</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/stevenyiran/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://github.com/Steven-Yiran">Github</a>
               </p>
             </td>
@@ -37,64 +40,61 @@
             </td>
           </tr>
         </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Research</heading>
-              <p>
-                I'm interested in computer vision, machine learning, and computer graphics. My previous experiences includes projects on simulating the physical world and applying machine learning techniques in bioinformatics research and production image classification.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Experiences</heading>
+            <p>
+              I am looking for SWE internships for Summer 2023!
+            </p>
+          </td>
+        </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='nerfsuper_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/nerf_supervision.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/nerf_supervision.jpg' width="160">
-              </div>
-              <script type="text/javascript">
-                function nerfsuper_start() {
-                  document.getElementById('nerfsuper_image').style.opacity = "1";
-                }
-
-                function nerfsuper_stop() {
-                  document.getElementById('nerfsuper_image').style.opacity = "0";
-                }
-                nerfsuper_stop()
-              </script>
+              <img src="images/cs188.jpg" alt="laiye">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="https://waymo.com/research/block-nerf/">
-                <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
+							<a href="https://laiye.com/en/">
+                <papertitle>Laiye AI</papertitle>
               </a>
               <br>
-              <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
-              <a href="http://www.peteflorence.com/">Pete Florence</a>, 
-              <strong>Jonathan T. Barron</strong>,  <br>
-              <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
-              <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
-              <a href="http://web.mit.edu/phillipi/">Phillip Isola</a>
-              <br>
-              <em>ICRA</em>, 2022  
-              <br>
-							<a href="http://yenchenlin.me/nerf-supervision/">project page</a> / 
-							<a href="https://arxiv.org/abs/2203.01913">arXiv</a> / 
-							<a href="https://www.youtube.com/watch?v=_zN-wVwPH1s">video</a> /
-							<a href="https://github.com/yenchenlin/nerf-supervision-public">code</a> / 
-							<a href="https://colab.research.google.com/drive/13ISri5KD2XeEtsFs25hmZtKhxoDywB5y?usp=sharing">colab</a>				
               <p></p>
-              <p>NeRF works better than RGB-D cameras or multi-view stereo when learning object descriptors.</p>
+              <p>I worked as a Software Engineering Intern at this leading AI start-up based in Beijing.</p>
             </td>
           </tr>
-					
-					
         </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Research</heading>
+            <p>
+              I'm interested in computer vision, machine learning, and computer graphics. My previous experiences includes projects on simulating the physical world and applying machine learning techniques in bioinformatics research and production image classification.
+            </p>
+          </td>
+        </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/cs188.jpg" alt="cas">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="https://laiye.com/en/">
+                <papertitle>Chinese Academy of Science</papertitle>
+              </a>
+              <br>
+              <p></p>
+              <p>I worked as a Research Assistant to Dr. Yiteng Zhang in the Space Science Division.</p>
+            </td>
+          </tr>
+        </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
