added laiye pics

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/cs188.jpg" alt="laiye">
+              <img src="images/laiye.jpg" alt="laiye">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="https://laiye.com/en/">
@@ -63,7 +63,9 @@
               </a>
               <br>
               <p></p>
-              <p>I worked as a Software Engineering Intern at this leading AI start-up based in Beijing.</p>
+              <p>I worked as a Software Engineering Intern at Laiye AI, a leading AI start-up based in Beijing. During my time as an intern, I focused on creating process automation tools and
+                 softwares that make tedious formalities like tax reporting, new hire on-boarding more efficient. 
+              </p>
             </td>
           </tr>
         </tbody></table>
@@ -71,7 +73,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Research</heading>
+            <heading>Research & Projects</heading>
             <p>
               I'm interested in computer vision, machine learning, and computer graphics. My previous experiences includes projects on simulating the physical world and applying machine learning techniques in bioinformatics research and production image classification.
             </p>
@@ -86,11 +88,11 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="https://laiye.com/en/">
-                <papertitle>Chinese Academy of Science</papertitle>
+                <papertitle>Spacecraft data visualization</papertitle>
               </a>
               <br>
               <p></p>
-              <p>I worked as a Research Assistant to Dr. Yiteng Zhang in the Space Science Division.</p>
+              <p>I worked as a Research Assistant to Dr. Yiteng Zhang in the Space Science Division of Chinese Academy of Science.</p>
             </td>
           </tr>
         </tbody></table>
