added new experiences

--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
               <p style="text-align:center">
                 <name>Yiran(Steven) Shi</name>
               </p>
-              <p>I am a senior at <a href="https://www.middlebury.edu/">Middlebury College</a>, where I study computer science and mathematics. I also work at
+              <p>
+                I am a senior student at <a href="https://www.middlebury.edu/">Middlebury College</a>, where I study computer science and mathematics. I also work at
                 <a href="https://yakera.org/">Yakera</a> as a Full-Stack Engineer. 
               </p>
               <p>
                 At Middlebury I've participated in bioinformatics research, advised by <a href="http://www.cs.middlebury.edu/~mlinderman/">Micheal Linderman</a>. 
-                I am honored to be selected as <a href="https://www.middlebury.edu/office/social-entrepreneurship">Middlebury Social Entrepreneurship Fellow</a> for 
-                my work in promoting rural education in China. Outside of school, I am a certified snowboard instructor and enjoy basketball, hiking, and playing the guitar.
+                I am honored to be selected as a <a href="https://www.middlebury.edu/office/social-entrepreneurship">Middlebury Social Entrepreneurship Fellow</a> for 
+                my project in promoting rural education in China. Outside of school, I am a certified snowboard instructor and enjoy basketball, hiking, and playing the guitar.
+              </p>
+              <p>
+                I am passionate about solving challenges in artificial intelligence, specifically computer vision. The fact that human vision system can seeminglessly accomplish 
+                perception, inference, and generalization amazes me! 
               </p>
               <p style="text-align:center">
                 <a href="mailto:yirans@middlebury.edu">Email</a> &nbsp/&nbsp
@@ -36,7 +41,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/YShi.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/YShi.jpg" class="hoverZoomLink"></a>
+              <a href="images/YShi.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/YShi.jpg" class="profileImg"></a>
             </td>
           </tr>
         </tbody></table>
@@ -45,7 +50,7 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Experiences</heading>
-            <p>
+            <p style="color:red;font-size:15px;">
               I am looking for SWE internships for Summer 2023!
             </p>
           </td>
@@ -71,6 +76,25 @@
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ovr.jpg" alt="laiye" style="width:200px;">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="https://ovrtechnology.com/">
+                <papertitle>OVR Technology</papertitle>
+              </a>
+              <br>
+              <p></p>
+              <p>
+                OVR Technology is an Olfactory Virtual Reality start-up based in Burlington, VT. As part of the data science team, I applied state-of-the-art computer vision models to classify multiple 
+                types of hardware malfunctions. Our work contributed to the manufacturing process of a compact actuator device that produces scents that correspond to the virtual object!
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Research & Projects</heading>
@@ -84,15 +108,19 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/cs188.jpg" alt="cas">
+              <img src="images/cas.jpg" alt="cas" style="width:200px;">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="https://laiye.com/en/">
-                <papertitle>Spacecraft data visualization</papertitle>
+							<a href="http://english.nssc.cas.cn/">
+                <papertitle>Computer Graphics: Spacecraft Data Visualization</papertitle>
               </a>
               <br>
               <p></p>
-              <p>I worked as a Research Assistant to Dr. Yiteng Zhang in the Space Science Division of Chinese Academy of Science.</p>
+              <p>
+                I worked as a Research Assistant to Dr. Yiteng Zhang in the Space Science Division of the Chinese Academy of Science. The data visualization project involves converting physical data defined
+                by a huge (7 million) set of polygon meshes to 2D heat maps efficiently. Using the graphical interface my teammates and I have constructed, researchers can test their hypothesis on the large 
+                data set with precision and speed.  
+              </p>
             </td>
           </tr>
         </tbody></table>
@@ -102,7 +130,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Code based on <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>
+                Website code based on <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>
             </td>
           </tr>
         </tbody></table>
